# AdventOfCode

./: .gitignore  README.md
2015/: Cargo.toml  bacon.toml  new
2015/d01/src/: lib.rs  main.rs
2015/d02/: Cargo.toml
2015/d02/src/: lib.rs  main.rs
2015/d03/src/: lib.rs  main.rs
2015/d04/: Cargo.toml
2015/d04/src/: lib.rs  main.rs
2015/d05/src/: lib.rs  main.rs
2015/d06/: Cargo.toml
2015/d06/src/: lib.rs  main.rs
2015/d07/src/: lib.rs  main.rs
2015/d08/src/: lib.rs  main.rs
2015/d09/: Cargo.toml
2015/d09/src/: lib.rs  main.rs
2015/d10/: Cargo.toml
2015/d10/src/: lib.rs  main.rs
2015/d11/: Cargo.toml
2015/d11/src/: lib.rs  main.rs
2015/d12/: Cargo.toml
2015/d12/src/: lib.rs  main.rs
2015/d13/: Cargo.toml
2015/d13/src/: lib.rs  main.rs
2015/d14/: Cargo.toml
2015/d14/src/: lib.rs  main.rs
2015/src/: main.rs
2015/tests/: results.rs
2022/: README.md
2022/d01/: flake.nix  justfile  main.rs
2022/d02/: flake.nix  justfile  main.go
2022/d03/: flake.nix  (+1 more)
2023/: justfile
2025/: Cargo.toml  flake.nix  justfile  rust-toolchain.toml  rust.just
2025/d01/: Cargo.toml
2025/d01/src/: lib.rs  main.rs
2025/d02/: Cargo.toml
2025/d02/src/: lib.rs  main.rs
2025/d03/: Cargo.toml
2025/d03/src/: lib.rs  main.rs
2025/d04/: Cargo.toml
2025/d04/src/: lib.rs  main.rs
2025/d05/: Cargo.toml  justfile
2025/d05/src/: lib.rs  main.rs
2025/d06/: .rubocop.yml  d06.rb  flake.nix  justfile
2025/d07/: Cargo.toml
2025/d07/src/: lib.rs  main.rs
2025/d08/: Cargo.toml
2025/d08/src/: lib.rs  main.rs
2025/src/: main.rs
(+43 files in other folders)
