[package]
name = "AoC2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
[workspace.dependencies]
itertools = "0.10.5"
regex = "1.7.1"

[dependencies]
d01 = { path = "d01" }
d02 = { path = "d02" }
d03 = { path = "d03" }
d04 = { path = "d04" }
d05 = { path = "d05" }
d06 = { path = "d06" }
d07 = { path = "d07" }
d08 = { path = "d08" }
d09 = { path = "d09" }
d10 = { path = "d10" }
d11 = { path = "d11" }
d12 = { path = "d12" }
