[package]
name = "AoC2025"
version = "0.1.0"
edition = "2024"

[workspace]
[workspace.dependencies]
# itertools = "0.10.5"
# regex = "1.7.1"
# peg = "0.8.1"

[dependencies]
d01 = { path = "d01" }
d02 = { path = "d02" }
d03 = { path = "d03" }
d04 = { path = "d04" }
d05 = { path = "d05" }
d07 = { path = "d07" }
